--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     },
     "homepage": "https://github.com/phaserjs/template-vite#readme",
     "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
+        "dev": "node log.js dev & vite --config vite/vite.config.js",
         "build": "node log.js build & vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
     "devDependencies": {
         "terser": "^5.31.0",
-        "vite": "^5.3.1"
+        "vite": "^5.3.1",
+        "vite-plugin-socket-io": "^1.0.2"
     },
     "dependencies": {
-        "phaser": "^3.87.0"
+        "express": "^4.21.2",
+        "phaser": "^3.87.0",
+        "socket.io": "^4.8.1"
     }
 }
