--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "homepage": "https://github.com/phaserjs/template-vite#readme",
     "scripts": {
         "dev": "node log.js dev & vite --config vite/vite.config.js",
+        "devStart": "nodemon server.js",
+        "start": "snowpack dev",
         "build": "node log.js build & vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
     "devDependencies": {
+        "nodemon": "^3.1.9",
+        "snowpack": "^3.8.8",
         "terser": "^5.31.0",
         "vite": "^5.3.1",
         "vite-plugin-socket-io": "^1.0.2"
@@ -28,6 +32,7 @@
     "dependencies": {
         "express": "^4.21.2",
         "phaser": "^3.87.0",
-        "socket.io": "^4.8.1"
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1"
     }
 }
